
** The command shell prompts for the default directory, when it is
called with a prefix, and the default directory is a remote file name.
This is because some file name handlers (like ange-ftp) are not able to
run processes remotely.

** The new command `display-time-world' starts an updating time display
using several time zones, in a buffer.

** The new function `format-seconds' converts a number of seconds into a
readable string of days, hours, etc.

** The new variables `before-init-time' and `after-init-time' record the
value of `current-time' before and after Emacs loads the init files.

** The new function `emacs-uptime' returns the uptime of an Emacs instance.

** The new function `emacs-init-time' returns the duration of the
Emacs initialization.

** The minor modes unify-8859-on-encoding-mode, unify-8859-on-decoding-mode
are obsolete.

** The new commands `pp-macroexpand-expression' and `pp-macroexpand-last-sexp'
pretty-print macro expansions.


* Startup Changes in Emacs 23.1

** The option `inhibit-startup-screen' (with aliases to old names
`inhibit-splash-screen' and `inhibit-startup-message') doesn't inhibit
display of the initial message in the *scratch* buffer.  If you don't
want to display the initial message in the *scratch* buffer at startup,
you can set the option `initial-scratch-message' to nil.

** New user option `initial-buffer-choice' specifies what to display
after starting Emacs: startup screen, *scratch* buffer, visiting a
file or directory.

** New alias `argv' for `command-line-args-left'
This is a convenience alias, so that one can write `(pop argv)'
inside of --eval command line arguments in order to access
following arguments.

** The abbrev file is no longer read at startup in batch mode.

* Incompatible Editing Changes in Emacs 23.1

+++
** In Dired-x, all command guesses for ! are now added to the default
list accessible by M-n instead of pushing all guesses temporarily into
the history list.
